--- a/index.html
+++ b/index.html
@@ -9,40 +9,47 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Top line-->
     <header>
-      <a href="./index.html" class="logo"
-        >web<span class="head-logo">studio</span></a
-      >
-      <nav>
-        <ul class="no-point">
-          <li>
-            <a href="./index.html" class="nav-anchor">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="nav-anchor">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-anchor">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="no-point">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address tel">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >web<span class="head-logo">studio</span></a
+        >
+        <nav>
+          <ul class="no-point">
+            <li>
+              <a href="./index.html" class="nav-anchor">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="nav-anchor">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="nav-anchor">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="no-point">
+            <li>
+              <a href="mailto:info@devstudio.com" class="address"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="address tel"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!--Main content-->
     <main>
@@ -55,102 +62,114 @@
         <button type="button" class="order-button">Order Service</button>
       </section>
       <!--Features-->
-      <section>
-        <h2 class="visually-hidden">Features</h2>
-        <ul class="no-point">
-          <li>
-            <h3 class="third-header">Strategy</h3>
-            <p class="text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-header">Punctuality</h3>
-            <p class="text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-header">Diligence</h3>
-            <p class="text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="third-header">Technologies</h3>
-            <p class="text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="features">
+        <div class="container">
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="features-list no-point">
+            <li>
+              <h3 class="third-header">Strategy</h3>
+              <p class="text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="third-header">Punctuality</h3>
+              <p class="text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="third-header">Diligence</h3>
+              <p class="text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="third-header">Technologies</h3>
+              <p class="text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--What are we doing-->
-      <section>
-        <h2 class="second-header">what are we doing</h2>
-        <ul class="no-point">
-          <li>
-            <img src="images/monitor.jpg" alt="monitor" width="360" />
-          </li>
-          <li>
-            <img src="images/phone.jpg" alt="phone" width="360" />
-          </li>
-          <li>
-            <img
-              src="images/all.jpg"
-              alt="phone in hand and monitor on the background"
-              width="360"
-            />
-          </li>
-        </ul>
+      <section class="work">
+        <div class="container">
+          <h2 class="work-second-header">what are we doing</h2>
+          <ul class="work-list no-point">
+            <li>
+              <img src="images/monitor.jpg" alt="monitor" width="360" />
+            </li>
+            <li>
+              <img src="images/phone.jpg" alt="phone" width="360" />
+            </li>
+            <li>
+              <img
+                src="images/all.jpg"
+                alt="phone in hand and monitor on the background"
+                width="360"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Our Team cards-->
       <section class="team">
-        <h2 class="second-header">Our Team</h2>
-        <ul class="no-point">
-          <li class="team-box">
-            <img src="images/mark.jpg" alt="Mark Guerrero photo" width="260" />
-            <h3 class="third-header">Mark Guerrero</h3>
-            <p class="text">Product Designer</p>
-          </li>
-          <li class="team-box">
-            <img src="images/tom.jpg" alt="Tom Ford photo" width="260" />
-            <h3 class="third-header">Tom Ford</h3>
-            <p class="text">Frontend Developer</p>
-          </li>
-          <li class="team-box">
-            <img
-              src="images/camila.jpg"
-              alt="Camila Garcia photo"
-              width="260"
-            />
-            <h3 class="third-header">Camila Garcia</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li class="team-box">
-            <img
-              src="images/daniel.jpg"
-              alt="Daniel Wilson photo"
-              width="260"
-            />
-            <h3 class="third-header">Daniel Wilson</h3>
-            <p class="text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="team-second-header">our team</h2>
+          <ul class="team-list no-point">
+            <li class="team-box">
+              <img
+                src="images/mark.jpg"
+                alt="Mark Guerrero photo"
+                width="260"
+              />
+              <h3 class="third-header">Mark Guerrero</h3>
+              <p class="text">Product Designer</p>
+            </li>
+            <li class="team-box">
+              <img src="images/tom.jpg" alt="Tom Ford photo" width="260" />
+              <h3 class="third-header">Tom Ford</h3>
+              <p class="text">Frontend Developer</p>
+            </li>
+            <li class="team-box">
+              <img
+                src="images/camila.jpg"
+                alt="Camila Garcia photo"
+                width="260"
+              />
+              <h3 class="third-header">Camila Garcia</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li class="team-box">
+              <img
+                src="images/daniel.jpg"
+                alt="Daniel Wilson photo"
+                width="260"
+              />
+              <h3 class="third-header">Daniel Wilson</h3>
+              <p class="text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >web<span class="foot-logo">studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          >web<span class="foot-logo">studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
