--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,8 @@
   <body>
     <!--Top line-->
     <header>
-      <a href="./index.html" class="logo"
+      <div class="container">
+        <a href="./index.html" class="logo"
         >web<span class="head-logo">studio</span></a
       >
       <nav>
@@ -43,122 +44,127 @@
           </li>
         </ul>
       </address>
+      </div>
     </header>
     <!--Main content-->
     <main>
-      <section class="portfolio">
-        <h1 class="visually-hidden">Portfolio</h1>
-        <ul class="no-point">
-          <li>
-            <button type="button" class="portfolio-button">All</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Web Site</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">App</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Design</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-button">Marketing</button>
-          </li>
-        </ul>
-        <ul class="no-point">
-          <li>
-            <img
-              src="./images/banking-app-interface-concept.jpg"
-              alt="banking app layout picture"
-              width="360"
-            />
-            <h3 class="third-header">Banking App Interface Concept</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="blue background"
-              width="360"
-            />
-            <h3 class="third-header">Cashless Payment</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditaion-app.jpg"
-              alt="app on laptop and phone"
-              width="360"
-            />
-            <h3 class="third-header">Meditaion App</h3>
-            <p class="text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt=" taxi driver"
-              width="360"
-            />
-            <h3 class="third-header">Taxi Service</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="moon in space"
-              width="360"
-            />
-            <h3 class="third-header">Screen Illustrations</h3>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="smile woman online"
-              width="360"
-            />
-            <h3 class="third-header">Online Courses</h3>
-            <p class="text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/instagram-stories-concept.jpg"
-              alt="layout something"
-              width="360"
-            />
-            <h3 class="third-header">Instagram Stories Concept</h3>
-            <p class="text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/organic-food.jpg"
-              alt="food in a bag"
-              width="360"
-            />
-            <h3 class="third-header">Organic Food</h3>
-            <p class="text">Web Site</p>
-          </li>
-          <li>
-            <img
-              src="./images/fresh-coffee.jpg"
-              alt="barista made coffee"
-              width="360"
-            />
-            <h3 class="third-header">Fresh Coffee</h3>
-            <p class="text">Web Site</p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="portfolio">
+          <h1 class="visually-hidden">Portfolio</h1>
+          <ul class="portfolio-buttons-list no-point">
+            <li>
+              <button type="button" class="portfolio-button">All</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Web Site</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">App</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Design</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-button">Marketing</button>
+            </li>
+          </ul>
+          <ul class="no-point">
+            <li>
+              <img
+                src="./images/banking-app-interface-concept.jpg"
+                alt="banking app layout picture"
+                width="360"
+              />
+              <h3 class="third-header">Banking App Interface Concept</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="blue background"
+                width="360"
+              />
+              <h3 class="third-header">Cashless Payment</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/meditaion-app.jpg"
+                alt="app on laptop and phone"
+                width="360"
+              />
+              <h3 class="third-header">Meditaion App</h3>
+              <p class="text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/taxi-service.jpg"
+                alt=" taxi driver"
+                width="360"
+              />
+              <h3 class="third-header">Taxi Service</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="moon in space"
+                width="360"
+              />
+              <h3 class="third-header">Screen Illustrations</h3>
+              <p class="text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/online-courses.jpg"
+                alt="smile woman online"
+                width="360"
+              />
+              <h3 class="third-header">Online Courses</h3>
+              <p class="text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/instagram-stories-concept.jpg"
+                alt="layout something"
+                width="360"
+              />
+              <h3 class="third-header">Instagram Stories Concept</h3>
+              <p class="text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/organic-food.jpg"
+                alt="food in a bag"
+                width="360"
+              />
+              <h3 class="third-header">Organic Food</h3>
+              <p class="text">Web Site</p>
+            </li>
+            <li>
+              <img
+                src="./images/fresh-coffee.jpg"
+                alt="barista made coffee"
+                width="360"
+              />
+              <h3 class="third-header">Fresh Coffee</h3>
+              <p class="text">Web Site</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <!--Footer-->
     <footer class="footer">
-      <a href="./index.html" class="logo"
+      <div class="container">
+        <a href="./index.html" class="logo"
         >web<span class="foot-logo">studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
     </footer>
   </body>
 </html>
