--- a/index.html
+++ b/index.html
@@ -18,32 +18,32 @@
   <body>
     <!--Top line-->
     <header>
-      <div class="container">
+      <div class="container head-nav">
         <a href="./index.html" class="logo"
           >web<span class="head-logo">studio</span></a
         >
         <nav>
-          <ul class="no-point">
-            <li>
+          <ul class="nav-list no-point">
+            <li class="nav-list-item">
               <a href="./index.html" class="nav-anchor">Studio</a>
             </li>
-            <li>
+            <li class="nav-list-item">
               <a href="./portfolio.html" class="nav-anchor">Portfolio</a>
             </li>
-            <li>
+            <li class="nav-list-item">
               <a href="" class="nav-anchor">Contacts</a>
             </li>
           </ul>
         </nav>
         <address>
-          <ul class="no-point">
-            <li>
-              <a href="mailto:info@devstudio.com" class="address"
+          <ul class="address-list no-point">
+            <li class="nav-list-item">
+              <a href="mailto:info@devstudio.com" class="address-anchor"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a href="tel:+110001111111" class="address tel"
+            <li class="nav-list-item">
+              <a href="tel:+110001111111" class="address-anchor tel"
                 >+11 (000) 111-11-11</a
               >
             </li>
