--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </li>
           </ul>
         </nav>
-        <address>
+        <address class="address">
           <ul class="address-list no-point">
             <li class="nav-list-item">
               <a href="mailto:info@devstudio.com" class="address-anchor"
