--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list no-point">
-            <li>
+            <li class="features-list-item">
               <h3 class="third-header">Strategy</h3>
               <p class="text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="third-header">Punctuality</h3>
               <p class="text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="third-header">Diligence</h3>
               <p class="text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features-list-item">
               <h3 class="third-header">Technologies</h3>
               <p class="text">
                 Design practice focused on digital experiences. We bring forth a
@@ -102,13 +102,13 @@
         <div class="container">
           <h2 class="work-second-header">what are we doing</h2>
           <ul class="work-list no-point">
-            <li>
+            <li class="work-list-item">
               <img src="images/monitor.jpg" alt="monitor" width="360" />
             </li>
-            <li>
+            <li class="work-list-item">
               <img src="images/phone.jpg" alt="phone" width="360" />
             </li>
-            <li>
+            <li class="work-list-item">
               <img
                 src="images/all.jpg"
                 alt="phone in hand and monitor on the background"
@@ -125,6 +125,7 @@
           <ul class="team-list no-point">
             <li class="team-box">
               <img
+                class="work-image"
                 src="images/mark.jpg"
                 alt="Mark Guerrero photo"
                 width="260"
@@ -133,12 +134,18 @@
               <p class="text">Product Designer</p>
             </li>
             <li class="team-box">
-              <img src="images/tom.jpg" alt="Tom Ford photo" width="260" />
+              <img
+                class="work-image"
+                src="images/tom.jpg" 
+                alt="Tom Ford photo" 
+                width="260" 
+              />
               <h3 class="third-header">Tom Ford</h3>
               <p class="text">Frontend Developer</p>
             </li>
             <li class="team-box">
               <img
+                class="work-image"
                 src="images/camila.jpg"
                 alt="Camila Garcia photo"
                 width="260"
@@ -148,6 +155,7 @@
             </li>
             <li class="team-box">
               <img
+                class="work-image"
                 src="images/daniel.jpg"
                 alt="Daniel Wilson photo"
                 width="260"
