--- a/portfolio.html
+++ b/portfolio.html
@@ -9,67 +9,74 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Top line-->
     <header>
-      <div class="container">
+      <div class="container head-nav">
         <a href="./index.html" class="logo"
-        >web<span class="head-logo">studio</span></a
-      >
-      <nav>
-        <ul class="no-point">
-          <li>
-            <a href="./index.html" class="nav-anchor">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="nav-anchor">Portfolio</a>
-          </li>
-          <li>
-            <a href="" class="nav-anchor">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="no-point">
-          <li>
-            <a href="mailto:info@devstudio.com" class="address"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="address">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+          >web<span class="head-logo">studio</span></a
+        >
+        <nav>
+          <ul class="nav-list no-point">
+            <li class="nav-list-item">
+              <a href="./index.html" class="nav-anchor">Studio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="./portfolio.html" class="nav-anchor">Portfolio</a>
+            </li>
+            <li class="nav-list-item">
+              <a href="" class="nav-anchor">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="address-list no-point">
+            <li class="nav-list-item">
+              <a href="mailto:info@devstudio.com" class="address-anchor"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="nav-list-item">
+              <a href="tel:+110001111111" class="address-anchor tel"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <!--Main content-->
     <main>
-      <div class="container">
-        <section class="portfolio">
+      <section class="portfolio">
+        <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-          <ul class="portfolio-buttons-list no-point">
-            <li>
+          <ul class="buttons-list no-point">
+            <li class="button-list-item">
               <button type="button" class="portfolio-button">All</button>
             </li>
-            <li>
+            <li class="button-list-item">
               <button type="button" class="portfolio-button">Web Site</button>
             </li>
-            <li>
+            <li class="button-list-item">
               <button type="button" class="portfolio-button">App</button>
             </li>
-            <li>
+            <li class="button-list-item">
               <button type="button" class="portfolio-button">Design</button>
             </li>
-            <li>
+            <li class="button-list-item">
               <button type="button" class="portfolio-button">Marketing</button>
             </li>
           </ul>
-          <ul class="no-point">
-            <li>
+        </div>
+        <div class="container">
+          <ul class="cards-list no-point">
+            <li class="cards-list-item">
               <img
                 src="./images/banking-app-interface-concept.jpg"
                 alt="banking app layout picture"
@@ -78,7 +85,7 @@
               <h3 class="third-header">Banking App Interface Concept</h3>
               <p class="text">App</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="blue background"
@@ -87,7 +94,7 @@
               <h3 class="third-header">Cashless Payment</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/meditaion-app.jpg"
                 alt="app on laptop and phone"
@@ -96,7 +103,7 @@
               <h3 class="third-header">Meditaion App</h3>
               <p class="text">App</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/taxi-service.jpg"
                 alt=" taxi driver"
@@ -105,7 +112,7 @@
               <h3 class="third-header">Taxi Service</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="moon in space"
@@ -114,7 +121,7 @@
               <h3 class="third-header">Screen Illustrations</h3>
               <p class="text">Design</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/online-courses.jpg"
                 alt="smile woman online"
@@ -123,7 +130,7 @@
               <h3 class="third-header">Online Courses</h3>
               <p class="text">Marketing</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/instagram-stories-concept.jpg"
                 alt="layout something"
@@ -132,7 +139,7 @@
               <h3 class="third-header">Instagram Stories Concept</h3>
               <p class="text">Design</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/organic-food.jpg"
                 alt="food in a bag"
@@ -141,7 +148,7 @@
               <h3 class="third-header">Organic Food</h3>
               <p class="text">Web Site</p>
             </li>
-            <li>
+            <li class="cards-list-item">
               <img
                 src="./images/fresh-coffee.jpg"
                 alt="barista made coffee"
@@ -151,19 +158,19 @@
               <p class="text">Web Site</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <!--Footer-->
     <footer class="footer">
       <div class="container">
         <a href="./index.html" class="logo"
-        >web<span class="foot-logo">studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+          >web<span class="foot-logo">studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
