--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           >web<span class="head-logo">studio</span></a
         >
         <nav>
-          <ul class="nav-list no-point">
+          <ul class="nav-list">
             <li class="nav-list-item">
               <a href="./index.html" class="nav-anchor">Studio</a>
             </li>
@@ -36,7 +36,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="address-list no-point">
+          <ul class="address-list">
             <li class="nav-list-item">
               <a href="mailto:info@devstudio.com" class="address-anchor"
                 >info@devstudio.com</a
@@ -65,7 +65,7 @@
       <section class="features">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
-          <ul class="features-list no-point">
+          <ul class="features-list">
             <li class="features-list-item">
               <h3 class="third-header">Strategy</h3>
               <p class="text">
@@ -101,7 +101,7 @@
       <section class="work">
         <div class="container">
           <h2 class="work-second-header">what are we doing</h2>
-          <ul class="work-list no-point">
+          <ul class="work-list">
             <li class="work-list-item">
               <img src="images/monitor.jpg" alt="monitor" width="360" />
             </li>
@@ -122,7 +122,7 @@
       <section class="team">
         <div class="container">
           <h2 class="team-second-header">our team</h2>
-          <ul class="team-list no-point">
+          <ul class="team-list">
             <li class="team-box">
               <img
                 class="work-image"
