--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
           >web<span class="head-logo">studio</span></a
         >
         <nav>
-          <ul class="nav-list no-point">
+          <ul class="nav-list">
             <li class="nav-list-item">
               <a href="./index.html" class="nav-anchor">Studio</a>
             </li>
@@ -36,7 +36,7 @@
           </ul>
         </nav>
         <address class="address">
-          <ul class="address-list no-point">
+          <ul class="address-list">
             <li class="nav-list-item">
               <a href="mailto:info@devstudio.com" class="address-anchor"
                 >info@devstudio.com</a
@@ -56,7 +56,7 @@
       <section class="portfolio">
         <div class="container">
           <h1 class="visually-hidden">Portfolio</h1>
-          <ul class="buttons-list no-point">
+          <ul class="buttons-list">
             <li class="button-list-item">
               <button type="button" class="portfolio-button">All</button>
             </li>
@@ -75,7 +75,7 @@
           </ul>
         </div>
         <div class="container">
-          <ul class="cards-list no-point">
+          <ul class="cards-list">
             <li class="cards-list-item">
               <img
                 src="./images/banking-app-interface-concept.jpg"
