--- a/portfolio.html
+++ b/portfolio.html
@@ -73,89 +73,114 @@
               <button type="button" class="portfolio-button">Marketing</button>
             </li>
           </ul>
-        </div>
-        <div class="container">
           <ul class="cards-list">
             <li class="cards-list-item">
               <img
                 src="./images/banking-app-interface-concept.jpg"
                 alt="banking app layout picture"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Banking App Interface Concept</h3>
-              <p class="text">App</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Banking App Interface Concept</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="blue background"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Cashless Payment</h3>
-              <p class="text">Marketing</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/meditaion-app.jpg"
                 alt="app on laptop and phone"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Meditaion App</h3>
-              <p class="text">App</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Meditaion App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/taxi-service.jpg"
                 alt=" taxi driver"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Taxi Service</h3>
-              <p class="text">Marketing</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="moon in space"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/online-courses.jpg"
                 alt="smile woman online"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Online Courses</h3>
-              <p class="text">Marketing</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/instagram-stories-concept.jpg"
                 alt="layout something"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Instagram Stories Concept</h3>
-              <p class="text">Design</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Instagram Stories Concept</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/organic-food.jpg"
                 alt="food in a bag"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Organic Food</h3>
-              <p class="text">Web Site</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Organic Food</h3>
+                <p class="text">Web Site</p>
+              </div>
             </li>
             <li class="cards-list-item">
               <img
                 src="./images/fresh-coffee.jpg"
                 alt="barista made coffee"
                 width="360"
+                class="cards-list-image"
               />
-              <h3 class="third-header">Fresh Coffee</h3>
-              <p class="text">Web Site</p>
+              <div class="cards-list-text">
+                <h3 class="third-header">Fresh Coffee</h3>
+                <p class="text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
